changes all objects to https

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Embedded Styles</p>
     </section>
 </div>
 <div class="slide object">
-     <object data="http://www.csszengarden.com/999/"></object>
+     <object data="https://www.csszengarden.com/999/"></object>
      <a href="http://www.csszengarden.com/999/" target="play" class="objectlink">Open in separate window</a>
 </div>
 <div class="slide object">
@@ -181,11 +181,11 @@ Embedded Styles</p>
     </section>
 </div>
 <div class="slide object">
-     <object data="http://www.csszengarden.com/205/"></object>
+     <object data="https://www.csszengarden.com/205/"></object>
      <a href="http://www.csszengarden.com/205 /" target="play" class="objectlink">Open in separate window</a>
 </div>
 <div class="slide object">
-     <object data="http://www.csszengarden.com/216/"></object>
+     <object data="https://www.csszengarden.com/216/"></object>
      <a href="http://www.csszengarden.com/216/" target="play" class="objectlink">Open in separate window</a>
 </div>
 
@@ -341,7 +341,7 @@ input[type="search"] {
 
 
 <div class="slide object">
-     <object data="http://www.fontsquirrel.com/tools/webfont-generator"></object>
+     <object data="https://www.fontsquirrel.com/tools/webfont-generator"></object>
      <header><h1>CSS Writing Tool</h1></header>
      <a href="http://www.fontsquirrel.com/tools/webfont-generator" target="play" class="objectlink">Open in separate window</a>
 </div>
