--- a/media/index.html
+++ b/media/index.html
@@ -441,7 +441,7 @@ min-resolution: 192dpi</pre>
  </div>
 
 <div class="slide object">
-  <object data="http://codepen.io/estelle/pen/ihsny"></object>
+  <object data="https://codepen.io/estelle/pen/ihsny"></object>
   <a href="http://codepen.io/estelle/pen/ihsny" class="objectlink" target="play">Visit Site</a>
  </div>
 
