--- a/selectors/index.html
+++ b/selectors/index.html
@@ -312,7 +312,7 @@ E F
 </div>
 
  <div class="object slide">
-  <object data="http://specifishity.com/" style="height: 792px;"></object>
+  <object data="https://specifishity.com/" style="height: 792px;"></object>
      <header><h1>Specificity (SpeciFISHity)</h1></header>
   <a href="http://specifishity.com/specifishity.pdf" target="play" class="objectlink">Download</a>
 </div>
@@ -1291,7 +1291,7 @@ E || F
 
 <!-- Specificity -->
  <div class="object slide">
-  <object data="http://specifishity.com/specifishity.pdf" style="height: 792px;"></object>
+  <object data="https://specifishity.com/specifishity.pdf" style="height: 792px;"></object>
      <header><h1>Specificity (SpeciFISHity)</h1></header>
   <a href="http://specifishity.com/specifishity.pdf" target="play" class="objectlink">Download</a>
 </div>
