--- a/flexbox/files/aligncontent.html
+++ b/flexbox/files/aligncontent.html
@@ -3,13 +3,13 @@
 <head>
 <style>
 html {min-height:100%;}
-.container {background-color: #11cc11; position: relative}
-.item {border: 1px solid #11cc11; padding: 3px; line-height: 1.6rem; box-sizing: border-box;
+.container {background-color: #9de89d; position: relative}
+.item {border: 1px solid #9de89d; padding: 3px; line-height: 1.6rem; box-sizing: border-box;
   letter-spacing: 2px;
  }
 .e:before, .f:before, .k:before,
 .e:after, .f:after, .k:after {
-	position: absolute; width: 300px; left: 0; height: 5px; background-color: rgba(255,255,0,0); content: '';ckground-color: rgba(255,0,0,0);
+	position: absolute; width: 300px; left: 0; height: 5px; background-color: rgba(255,255,0,0); content: '';
 box-shadow: 0 -4px 0px 0 yellow;
 }
 
