--- a/flexbox/files/alignself.html
+++ b/flexbox/files/alignself.html
@@ -7,9 +7,9 @@ head, style {display: block;}
 style:first-of-type {visibility:hidden;}
 style:last-of-type {padding: 20px; font-size: 1.5em; white-space: pre; font-family: monospace; background-color: rgba(255,255,255,0.5);}
 html {min-height:100%;}
-.container {background-color: #11cc11;
+.container {background-color: darkgreen;
   display: flex;}
-div {border: 3px solid #11cc11; padding: 3px; line-height: 1.6rem;}
+div {border: 3px solid darkgreen; padding: 3px; line-height: 1.6rem;}
 p { text-align: left}
 h1 {
 	border: 1px solid rgba(0,0,0,0.2);
