--- a/flexbox/files/finalflex.html
+++ b/flexbox/files/finalflex.html
@@ -7,7 +7,7 @@ head, style {display: block;}
 style:first-of-type {visibility:hidden;}
 #editme {padding: 20px; font-size: 1.5em; white-space: pre; font-family: monospace; background-color: rgba(255,255,255,0.5);}
 html {min-height:100%;}
-div {border: 3px solid #11cc11; padding: 3px; line-height: 2rem;}
+div {border: 3px solid #3b6c3b; padding: 3px; line-height: 2rem;}
 div div {border-color: #333;}
 div>div {border-style: dotted;}
 div:nth-of-type(2){border-style: dashed;}
