--- a/flexbox/files/fixedfooter.html
+++ b/flexbox/files/fixedfooter.html
@@ -6,9 +6,9 @@
 body {
 font-size: 2;
 }
-header {background-color: #11cc11;}
+header {background-color: #3b6c3b;}
 main {background-color: #fff;}
-footer {background-color: #11cc11;}
+footer {background-color: #3b6c3b;}
 body {margin: 0; padding: 0;}
   .wrapper {
     width: 100%;
