--- a/flexbox/files/flex3.html
+++ b/flexbox/files/flex3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-div {border: 3px solid #11cc11; padding: 3px; line-height: 2rem;}
+div {border: 3px solid #3b6c3b; padding: 3px; line-height: 2rem;}
 div div {border-color: #333;}
 div>div {border-style: dotted;}
 div:nth-of-type(2){border-style: dashed;}
