--- a/flexbox/files/homepage.html
+++ b/flexbox/files/homepage.html
@@ -16,7 +16,7 @@
       cmargin: 10px;
       padding: 10px;
     } nav {background-color: #ccc;}
- header , footer { text-align: center; background: #11cc11; color: white} 
+ header , footer { text-align: center; background: #3b6c3b; color: white} 
  main {background-color: grey;}
     body, nav, main, article {
       display: flex;
@@ -35,7 +35,7 @@
     h1 {margin: 0;}
     p {flex: 1 0 auto;}
     nav {display: flex; padding: 5px 2px;}
-    nav a {flex: 1 0; margin: 0 5px; background-color: white; color: #11cc11; text-align: center; text-decoration: none; border: 1px solid #333;}
+    nav a {flex: 1 0; margin: 0 5px; background-color: white; color: #3b6c3b; text-align: center; text-decoration: none; border: 1px solid #333;}
   </style>
 </head>
 <body>
