--- a/flexbox/files/homepagemobile2.html
+++ b/flexbox/files/homepagemobile2.html
@@ -29,7 +29,7 @@
  }
  header , footer { 
     text-align: center; 
-    background: #11cc11; 
+    background: #3b6c3b; 
     color: white;
   } 
   main {
@@ -62,7 +62,7 @@
   }
   nav a {
     min-width: 0; 
-    color: #11cc11; 
+    color: #3b6c3b; 
     text-align: center; 
     text-decoration: none;
   }</style><style id="editme" contenteditable>
