--- a/flexbox/files/homepageresponsive.html
+++ b/flexbox/files/homepageresponsive.html
@@ -17,7 +17,7 @@
   }
  header , 
  footer { text-align: center; 
-  background: #11cc11; 
+  background: #3b6c3b; 
   color: white;
   } 
   main {
@@ -53,7 +53,7 @@
       flex: 1 0; 
       margin: 0 5px; 
       background-color: white; 
-      color: #11cc11; 
+      color: #3b6c3b; 
       text-align: center; 
       text-decoration: none; 
       border: 1px solid #333;
