--- a/flexbox/files/alignself2.html
+++ b/flexbox/files/alignself2.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 html {min-height:100%;}
-.container {background-color: #11cc11; position: relative}
-.item {border: 1px solid #11cc11; padding: 3px; line-height: 1.6rem; box-sizing: border-box;
+.container {background-color: #9de89d; position: relative}
+.item {border: 1px solid #9de89d; padding: 3px; line-height: 1.6rem; box-sizing: border-box;
   letter-spacing: 2px;
  }
 .e:before, .f:before, .k:before,
