--- a/flexbox/files/button.html
+++ b/flexbox/files/button.html
@@ -11,7 +11,7 @@
     font-family: sans-serif;
     border: 1px solid;
     border-radius: 10px;
-    background-color: #11cc11;
+    background-color: #9de89d;
     box-shadow: 1px 1px 3px 0 rgba(0,0,0,0.4);
     align-items: center;
     padding: 0 10px;
