--- a/flexbox/files/collapse.html
+++ b/flexbox/files/collapse.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 html {min-height:100%;}
-.container {background-color: #11cc11;}
-div {border: 3px solid #11cc11; padding: 3px; line-height: 1.6rem;}
+.container {background-color: darkgreen;}
+div {border: 3px solid darkgreen; padding: 3px; line-height: 1.6rem;}
 p { text-align: left}
 h1 {
 	border: 1px solid rgba(0,0,0,0.2);
