--- a/flexbox/files/flexflow.html
+++ b/flexbox/files/flexflow.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 html {min-height:100%;}
-div {border: 3px solid #11cc11; padding: 3px; line-height: 2rem; min-height: 2rem;}
+div {border: 3px solid #3b6c3b; padding: 3px; line-height: 2rem; min-height: 2rem;}
 div div {border-color: #333;}
 div>div {border-style: dotted;}
 div:nth-of-type(2){border-style: dashed;}
