--- a/flexbox/files/homepagemobile.html
+++ b/flexbox/files/homepagemobile.html
@@ -18,7 +18,7 @@
  }
  header , footer { 
     text-align: center; 
-    background: #11cc11; 
+    background: #3b6c3b; 
     color: white;
   } 
   main {
@@ -51,7 +51,7 @@
   }
   nav a {
     min-width: 0; 
-    color: #11cc11; 
+    color: #3b6c3b; 
     text-align: center; 
     text-decoration: none;
   }
