--- a/flexbox/files/notmagic.html
+++ b/flexbox/files/notmagic.html
@@ -29,7 +29,7 @@ footer {
     nav {
       display: flex; 
       padding: 5px 2px; 
-      background-color: green; 
+      background-color: #9de89d; 
       border-top: 1px solid #333;
     }
     nav a {
