broken grid link

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -654,7 +654,7 @@ distributed. length value, content or <code>auto</code> . If set to <code>auto</
     
     <li><a href="../tables">Tables</a></li>
 
-    <li><a href="../grids">Grids</a></li>
+    <li><a href="../grid">Grids</a></li>
     <li><a href="../borders">Backgrounds &amp; Borders </a></li>
     <li><a href="../gradients">Gradients</a></li>
     <li><a href="../transforms">Transforms</a></li>
