--- a/gradients/index.html
+++ b/gradients/index.html
@@ -1309,7 +1309,7 @@ background-repeat: <span id="feature03" onKeyUp="changeFeature('backgroundRepeat
     
     <li><a href="../tables">Tables</a></li>
 
-    <li><a href="../grids">Grids</a></li>
+    <li><a href="../grid">Grids</a></li>
     <li><a href="../borders">Backgrounds &amp; Borders </a></li>
     <li><a href="../gradients">Gradients</a></li>
     <li><a href="../transforms">Transforms</a></li>
