--- a/media/index.html
+++ b/media/index.html
@@ -506,6 +506,7 @@ min-resolution: 192dpi</pre>
   <header><h1>Viewport Sidenote</h1></header>
     <section class="content">
       <p>If &lt;meta&gt; is set to disable zoom, there is no delay on onClick events.<p>
+      <p class="temphidden">If &lt;meta&gt; is set to disable zoom, you're a jerk!</p>
     </section>
 </div>
 
@@ -653,7 +654,7 @@ min-resolution: 192dpi</pre>
     
     <li><a href="../tables">Tables</a></li>
 
-    <li><a href="../grids">Grids</a></li>
+    <li><a href="../grid">Grids</a></li>
     <li><a href="../borders">Backgrounds &amp; Borders </a></li>
     <li><a href="../gradients">Gradients</a></li>
     <li><a href="../transforms">Transforms</a></li>
