--- a/borders/index.html
+++ b/borders/index.html
@@ -880,7 +880,7 @@ W = <input type="range" id="width" min="0" max="50" value="34" step="1" onChange
     
     <li><a href="../tables">Tables</a></li>
 
-    <li><a href="../grids">Grids</a></li>
+    <li><a href="../grid">Grids</a></li>
     <li><a href="../borders">Backgrounds &amp; Borders </a></li>
     <li><a href="../gradients">Gradients</a></li>
     <li><a href="../transforms">Transforms</a></li>
