--- a/intro/index.html
+++ b/intro/index.html
@@ -369,7 +369,7 @@ input[type="search"] {
     
     <li><a href="../tables">Tables</a></li>
 
-    <li><a href="../grids">Grids</a></li>
+    <li><a href="../grid">Grids</a></li>
     <li><a href="../borders">Backgrounds &amp; Borders </a></li>
     <li><a href="../gradients">Gradients</a></li>
     <li><a href="../transforms">Transforms</a></li>
