--- a/grid/files/pagelayout2.html
+++ b/grid/files/pagelayout2.html
@@ -32,6 +32,8 @@ style {
   <aside>aside</aside>
 <footer>footer</footer>
 </body>
-<style contenteditable id="editme">/* paste here
-*/</style>
+<style contenteditable id="editme">/*
+ paste code here
+ then size the columns.
+  */</style>
 </html>
