--- a/grid/files/extracols.html
+++ b/grid/files/extracols.html
@@ -4,8 +4,7 @@
 	<meta charset="utf-8">
 	<title>Grid</title>
 	<link rel="stylesheet" href="../files.css">
-<style>
-div div {line-height: 100px; border: 1px solid; background-color: #ccc;
+<style>div div {line-height: 100px; border: 1px solid; background-color: #ccc;
 	}
 #editme {line-height: 1.5;}
 </style>
@@ -13,8 +12,7 @@ div div {line-height: 100px; border: 1px solid; background-color: #ccc;
 </head>
 
 <body>
-<style contenteditable id="editme">
-  #grid {
+<style contenteditable id="editme" style="height: 350px; overflow-y: scroll">  #grid {
     display: grid;
     grid-template-columns: 100px;
     grid-auto-columns: 200px;
