update to css url

--- a/other/files/icons2.html
+++ b/other/files/icons2.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../css/files.css"/>
+  <link rel="stylesheet" href="files.css"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">      <style>
 @font-face {
