--- a/other/files/mask.html
+++ b/other/files/mask.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Masking Example</title>
-<link rel="stylesheet" href="../css/files.css"/>
+<link rel="stylesheet" href="files.css"/>
 <style>
 div {
   width: 402px;
