--- a/other/files/steps.html
+++ b/other/files/steps.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>CSS is Awesome</title>
-  <link rel="stylesheet" href="../css/filesteps.css">
+  <link rel="stylesheet" href="filesteps.css">
   <link rel="stylesheet" href="files.css">
   <style contenteditable class="editme">@keyframes pedal { 
     100% {background-position: -360px 0;}
