--- a/other/files/subset.html
+++ b/other/files/subset.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../css/files.css"/>
+  <link rel="stylesheet" href="files.css"/>
   <link href="//fonts.googleapis.com/css?family=Rye&text=AEIOUaeiou" rel="stylesheet" type="text/css" />
 
 <style contenteditable class="editme">p {
